// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileCompany добавление нового клиента 1`] = `
<div
  className="MobileCompany"
>
  <div
    className="MobileCompany__header section"
  >
    <div
      className="MobileCompany__filter section"
    >
      <button
        className="btn"
        disabled={false}
        onClick={[Function]}
      >
        Все
      </button>
      <button
        className="btn"
        disabled={false}
        onClick={[Function]}
      >
        Активные
      </button>
      <button
        className="btn"
        disabled={false}
        onClick={[Function]}
      >
        Заблокированные
      </button>
    </div>
  </div>
  <table>
    <thead>
      <tr>
        <td>
          Фамилия
        </td>
        <td>
          Имя
        </td>
        <td>
          Отчество
        </td>
        <td>
          Баланс
        </td>
        <td>
          Статус
        </td>
        <td>
          Редактировать
        </td>
        <td>
          Удалить
        </td>
      </tr>
    </thead>
    <tbody>
      <tr
        className="MobileClient"
      >
        <td>
          Маховицкий
        </td>
        <td>
          Эрнест
        </td>
        <td>
          Афанасиевич
        </td>
        <td>
          10.55
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <button
            className="btn"
            disabled={false}
            onClick={[Function]}
          >
            Редактировать
          </button>
        </td>
        <td>
          <button
            className="btn"
            disabled={false}
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
      <tr
        className="MobileClient"
      >
        <td>
          Набойщикова
        </td>
        <td>
          Лиана
        </td>
        <td>
          Агафоновна
        </td>
        <td>
          -3.5
        </td>
        <td
          className="blocked"
        >
          blocked
        </td>
        <td>
          <button
            className="btn"
            disabled={false}
            onClick={[Function]}
          >
            Редактировать
          </button>
        </td>
        <td>
          <button
            className="btn"
            disabled={false}
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <button
    className="btn"
    disabled={false}
    onClick={[Function]}
  >
    Добавить нового
  </button>
</div>
`;

exports[`MobileCompany добавление нового клиента 2`] = `
<div
  className="MobileCompany"
>
  <div
    className="MobileCompany__header section"
  >
    <div
      className="MobileCompany__filter section"
    >
      <button
        className="btn"
        disabled={false}
        onClick={[Function]}
      >
        Все
      </button>
      <button
        className="btn"
        disabled={false}
        onClick={[Function]}
      >
        Активные
      </button>
      <button
        className="btn"
        disabled={false}
        onClick={[Function]}
      >
        Заблокированные
      </button>
    </div>
  </div>
  <table>
    <thead>
      <tr>
        <td>
          Фамилия
        </td>
        <td>
          Имя
        </td>
        <td>
          Отчество
        </td>
        <td>
          Баланс
        </td>
        <td>
          Статус
        </td>
        <td>
          Редактировать
        </td>
        <td>
          Удалить
        </td>
      </tr>
    </thead>
    <tbody>
      <tr
        className="MobileClient"
      >
        <td>
          Маховицкий
        </td>
        <td>
          Эрнест
        </td>
        <td>
          Афанасиевич
        </td>
        <td>
          10.55
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <button
            className="btn"
            disabled={false}
            onClick={[Function]}
          >
            Редактировать
          </button>
        </td>
        <td>
          <button
            className="btn"
            disabled={false}
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
      <tr
        className="MobileClient"
      >
        <td>
          Набойщикова
        </td>
        <td>
          Лиана
        </td>
        <td>
          Агафоновна
        </td>
        <td>
          -3.5
        </td>
        <td
          className="blocked"
        >
          blocked
        </td>
        <td>
          <button
            className="btn"
            disabled={false}
            onClick={[Function]}
          >
            Редактировать
          </button>
        </td>
        <td>
          <button
            className="btn"
            disabled={false}
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
      <tr
        className="MobileClient"
      >
        <td>
          Ветошников
        </td>
        <td>
          Тимур
        </td>
        <td>
          Андреевич
        </td>
        <td>
          1
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <button
            className="btn"
            disabled={false}
            onClick={[Function]}
          >
            Редактировать
          </button>
        </td>
        <td>
          <button
            className="btn"
            disabled={false}
            onClick={[Function]}
          >
            Удалить
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <button
    className="btn"
    disabled={false}
    onClick={[Function]}
  >
    Добавить нового
  </button>
</div>
`;
